--- a/scbwisummer2017/package.json
+++ b/scbwisummer2017/package.json
@@ -9,13 +9,17 @@
     "typescript": "^2.2.1"
   },
   "dependencies": {
+    "@types/material-ui": "^0.16.51",
     "@types/react": "^15.0.13",
     "@types/react-dom": "^0.14.23",
     "@types/react-router": "^2.0.49",
+    "@types/react-tap-event-plugin": "0.0.30",
+    "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0"
   }
 }
