--- a/scbwisummer2017/package.json
+++ b/scbwisummer2017/package.json
@@ -3,6 +3,7 @@
   "name": "scbwi",
   "private": true,
   "devDependencies": {
+    "@types/jquery": "^2.0.41",
     "gulp": "^3.9.1",
     "source-map-loader": "^0.1.6",
     "ts-loader": "^2.0.1",
@@ -20,6 +21,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "jquery": "3.2.1"
   }
 }
