--- a/scbwisummer2017/package.json
+++ b/scbwisummer2017/package.json
@@ -7,7 +7,7 @@
     "gulp": "^3.9.1",
     "source-map-loader": "^0.1.6",
     "ts-loader": "^2.0.1",
-    "typescript": "^2.2.1"
+    "typescript": "2.2.2"
   },
   "dependencies": {
     "@types/material-ui": "^0.16.51",
