--- a/scbwisummer2017/package.json
+++ b/scbwisummer2017/package.json
@@ -5,6 +5,8 @@
   "devDependencies": {
     "@types/jquery": "^2.0.41",
     "gulp": "^3.9.1",
+    "react": "^15.5.1",
+    "react-dom": "^15.5.1",
     "source-map-loader": "^0.1.6",
     "ts-loader": "^2.0.1",
     "typescript": "2.2.2"
@@ -15,13 +17,14 @@
     "@types/react-dom": "^0.14.23",
     "@types/react-router": "^2.0.49",
     "@types/react-tap-event-plugin": "0.0.30",
+    "braintree-web": "^3.12.1",
+    "jquery": "3.2.1",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
-    "jquery": "3.2.1"
+    "redux": "^3.6.0"
   }
 }
