--- a/scbwisummer2017/scbwisummer2017.csproj
+++ b/scbwisummer2017/scbwisummer2017.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
     <PackageReference Include="Braintree" Version="3.6.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
     <PackageReference Include="WebApiContrib.Core.Formatter.Csv" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.3" />
   </ItemGroup>
