--- a/scbwisummer2017/package.json
+++ b/scbwisummer2017/package.json
@@ -9,17 +9,18 @@
     "react-dom": "^15.5.1",
     "source-map-loader": "^0.1.6",
     "ts-loader": "^2.0.1",
-    "typescript": "2.2.2"
+    "typescript": "2.3.2"
   },
   "dependencies": {
-    "@types/material-ui": "^0.16.51",
+    "@types/material-ui": "^0.17.5",
     "@types/react": "^15.0.13",
     "@types/react-dom": "^0.14.23",
     "@types/react-router": "^2.0.49",
     "@types/react-tap-event-plugin": "0.0.30",
     "braintree-web": "^3.12.1",
+    "caniuse-api": "^2.0.0",
     "jquery": "3.2.1",
-    "material-ui": "^0.17.0",
+    "material-ui": "^0.18.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
